# envoy

./: .gitignore  Dockerfile  Dockerfile.server  README.md  docker-compose.rabbitmq.yaml  docker-compose.testing.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: coverage-comment.yml  coverage.yml  docker-published-release.yml  docker.yml  linttest.yml
demo/: README.md  docker-compose.yaml  extract-certs.sh
demo/db-init/: Dockerfile  Dockerfile.build  entrypoint.sh  init_db.py
demo/tls-termination/: Dockerfile  nginx.conf
demo/tls-termination/entrypoint/: entrypoint.sh  san.conf  tls-setup.sh
envoy_schema/: pyproject.toml  setup.cfg
envoy_schema/src/: envoy_schema
postman/: envoy-admin-server.postman_collection.json  envoy.postman_collection.json
requirements/: requirements.dev.txt  requirements.prod.txt  requirements.testing.txt
server/: depends.py  main.py  settings.py  utils.py
server/alembic/: env.py
server/api/: __init__.py  depends.py  error_handler.py  response.py
server/api/sep2/: __init__.py  time.py
server/crud/: __init__.py  auth.py
server/manager/: __init__.py
server/mapper/: __init__.py
server/model/: __init__.py  aggregator.py  base.py  dnsp.py  user.py
server/models/db/: base.py
server/schema/sep2/: base.py  error.py  time.py
src/envoy/: __init__.py  logfilters.py  settings.py
src/envoy/admin/: main.py  settings.py
src/envoy/admin/api/: __init__.py  aggregator.py  archive.py  billing.py  certificate.py  config.py  depends.py  doe.py  health.py  log.py  pricing.py  site.py  site_control.py  site_reading.py
src/envoy/admin/crud/: __init__.py  aggregator.py  archive.py  billing.py  certificate.py  doe.py  log.py  pricing.py  site.py  site_reading.py
src/envoy/admin/manager/: __init__.py  aggregator.py  archive.py  billing.py  certificate.py  config.py  doe.py  log.py  pricing.py  site.py  site_control.py  site_reading.py
src/envoy/admin/mapper/: __init__.py  aggregator.py  archive.py  billing.py  certificate.py  doe.py  log.py  pricing.py  site.py  site_control.py  site_reading.py
src/envoy/admin/schema/: pricing.py  site.py  uri.py
src/envoy/notification/: __init__.py  exception.py  handler.py  main.py  settings.py
src/envoy/notification/crud/: __init__.py  archive.py  batch.py  common.py
src/envoy/notification/manager/: __init__.py  notification.py
src/envoy/notification/task/: __init__.py  check.py  transmit.py
src/envoy/server/: __init__.py  alembic.ini  cache.py  database.py  endpoint_exclusion.py  exception.py  function_set.py  lifespan.py  main.py  request_scope.py  request_state.py  settings.py  tasks.py
src/envoy/server/alembic/: __init__.py  env.py
src/envoy/server/api/: __init__.py  depends.py  error_handler.py  query.py  request.py  response.py  router.py
src/envoy/server/crud/: aggregator.py  archive.py  auth.py  common.py  der.py  doe.py  end_device.py  health.py  link.py  log_event.py  pricing.py  response.py  server.py  site.py  site_reading.py  subscription.py
src/envoy/server/manager/: der.py  der_constants.py  derp.py  device_capability.py  end_device.py  function_set_assignments.py  health.py  log_event.py  metering.py  nmi_validator.py  pricing.py  response.py  server.py  subscription.py  time.py
src/envoy/server/mapper/: __init__.py  common.py  constants.py  exception.py
src/envoy/server/model/: __init__.py  aggregator.py  base.py  constants.py  dnsp.py  doe.py  log.py  response.py  server.py  site.py  site_reading.py  subscription.py  tariff.py  user.py
src/envoy/server/schema/: function_set.py  uri.py
tests/: assert_time.py  assert_type.py  conftest.py  postgres_testing.py  requirements.txt
tests/data/: __init__.py
tests/data/azure/: __init__.py  jwks-response-filtered.json  jwks-response.json  token-response.json
tests/data/certificates/: .gitignore  README.md  __init__.py  certificate1.py  certificate2.py  certificate3.py  certificate4.py  certificate5.py  certificate6.py  certificate7.py  certificate8.py  certificate9.py  certificate_noreg.py  generate.py
tests/data/fake/: generator.py  test_generator.py
tests/data/keys/: __init__.py  test_key1.pem  test_key1.pub.pem  test_key2.pem  test_key2.pub.pem  test_key3.pem  test_key3.pub.pem
tests/data/sep2_xml/: test_xml_round_trips.py  xml_to_model_mappings.py
tests/data/sep2_xml/device_capability/: devicecapability.xml
tests/data/sep2_xml/does/: dercontrollist.xml  derprogramlist.xml
tests/data/sep2_xml/end_device_resource/: enddevice.xml  enddevicelist.xml  functionsetassignmentslist.xml  registration.xml
tests/data/sep2_xml/meter_mirroring/: meterreadinglist.xml  mirrormeterreading.xml  mirrorusagepoint.xml  (+4 more)
tests/data/sql/: __init__.py  additional_does.sql  base_config.sql  billing_data.sql  la_timezone.sql  remove_device_registrations.sql
tests/integration/: conftest.py  http.py  integration_server.py  notification.py  request.py  response.py
tests/integration/admin/: test_aggregator.py  test_archive.py  test_billing.py  test_certificate.py  test_config.py  test_doe.py  test_health.py  test_log.py  test_notification.py  test_pricing.py  test_site.py  test_site_control.py  test_site_readings.py
tests/integration/func_sets/: __init__.py  test_connection_point.py  test_der.py  test_derp.py  test_device_capability.py  test_end_device.py  test_function_set_assignments.py  test_log_event.py  test_metering_mirror.py  test_notification.py  test_pricing.py  test_pub_sub.py  test_response.py  test_time.py
tests/integration/general/: test_admin.py  test_api.py  test_azure_ad.py  test_endpoint_exclusion.py  test_link.py  test_middleware.py  test_settings.py  test_uvicorn.py
tests/integration/unsecured/: __init__.py  test_health.py  test_version.py
tests/unit/: __init__.py  conftest.py  jwt.py  mocks.py  test_settings.py
tests/unit/admin/: test_admin_settings.py
tests/unit/notification/: mocks.py
tests/unit/server/: conftest.py  resources.py  test_cache.py  test_depends.py  test_endpoint_exclusion.py  test_request_scope.py  test_server_settings.py  test_tasks.py  test_utils.py
(+198 files in other folders)
