[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
filterwarnings = ["error::DeprecationWarning"]
addopts = "--strict-markers"
markers = [
    "cert_header: marks tests to use a custom value for cert_header instead of the default",
    "href_prefix: marks tests to use a custom value for href_prefix instead of the default of None",
    "no_default_doe: marks tests to disable the default DOE config values (disables default DERControl endpoint)",
    "azure_ad_auth: marks tests to enable the azure active directory auth dependency",
    "azure_ad_db: marks tests to enable the azure active directory dynamic db creds dependency (requires azure_ad_auth)",
    "azure_ad_db_refresh_secs: marks tests to set the config value azure_ad_db_refresh_secs (requires azure_ad_db)",
    "csipv11a_xmlns_optin_middleware: mark tests to install the csip-aus v11a xml namespace opt-in middleware",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["src/envoy/server/alembic", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envoy"
version = "0.7.0"
dependencies = [
    "fastapi>=0.94.1",
    "sqlalchemy>=2.0.0",
    "alembic",
    "tzlocal",
    "pydantic_xml[lxml]",
    "pydantic!=2.7.0",
    "pydantic-xml!=2.9.1",                                                   # Known compatibility issue with pydantic
    "pydantic-settings",
    "python-dateutil",
    "asyncpg",
    "fastapi-async-sqlalchemy",
    "alembic",
    "python-dotenv",
    "uvicorn",
    "pyjwt",
    "cryptography",
    "httpx",
    "taskiq!=0.11.5,!=0.11.6",                                               # Known compatibiity issue with pydantic
    "taskiq-aio-pika",
    "parse",
    "envoy_schema @ git+ssh://git@github.com/bsgip/envoy-schema.git@v0.2.0",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "flake8",
    "mypy",
    "sqlalchemy[mypy]",
    "types-python-dateutil",
    "types-tzlocal",
    "black",
    "coverage",
]
test = [
    "pytest",
    "pytest-asyncio",
    "anyio",
    "pytest-mock",
    "pytest-postgresql",
    "psycopg",
    "httpx",
    "defusedxml",
    "asgi_lifespan",
    "assertical",
]

[tool.setuptools.package-data]
"envoy" = ["py.typed"]
