[flake8]
max-line-length = 120
max-complexity = 15
exclude = tests

[isort]
force_grid_wrap = 0
include_trailing_comma = True
line_length = 120
multi_line_output = 3
use_parentheses = True

[options]
package_dir=
    = ./
packages = find_namespace:

[options.packages.find]
where = ./
exclude = tests*

[metadata]
name = utility-server
version = 0.0.1