[flake8]
max-line-length = 120
max-complexity = 15
exclude =
    = src/envoy/server/alembic/versions
    = build/
    = src/envoy/admin/mapper/__init__.py
    = src/envoy/admin/crud/__init__.py
    = src/envoy/admin/manager/__init__.py

[isort]
force_grid_wrap = 0
include_trailing_comma = True
line_length = 120
multi_line_output = 3
use_parentheses = True

[options]
package_dir=
    = ./src
packages = find_namespace:

[options.packages.find]
where = ./src
exclude = tests*
